--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "xss-clean": "^0.1.1"
   }
 }
